# qrx

./: Cargo.toml  Cross.toml  README.md  ci.toml  rustfmt.toml  shell.nix
scripts/: install.sh  pipe.sh
scripts/hooks/: pre-commit
src/: capture.rs  clipboard.rs  decode.rs  main.rs  screenshot.rs
src/backend/: macos.rs  mod.rs  wayland.rs  x11.rs
