[package]
name = "qrx"
version = "0.1.1"
authors = ["x71c9 <mail@x71c9.com>"]
edition = "2024"
description = "CLI tool to capture a screen region, decode any QR code found, and copy the result to clipboard"
repository = "https://github.com/x71c9/qrx"
license = "MIT"

[[bin]]
name = "qrx"
path = "src/main.rs"

[dependencies]
anyhow = "1"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
image = { version = "0.25", default-features = false }
rqrr = "0.8"

[package.metadata.release]
push = true
publish = true
tag-message = "chore(release): v{{version}}"
pre-release-commit-message = "chore(release): release v{{version}}"
