[package]
name = "qrx"
version = "0.4.0"
authors = ["x71c9 <mail@x71c9.com>"]
edition = "2024"
description = "CLI tool to capture a screen region, decode any QR code found, and copy the result to clipboard"
repository = "https://github.com/x71c9/qrx"
license = "MIT"

[[bin]]
name = "qrx"
path = "src/main.rs"

[dependencies]
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rxing = { version = "0.9", default-features = false, features = ["encoding_rs", "decoders", "qrcode"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

[package.metadata.release]
push = true
publish = true
tag-message = "chore(release): v{{version}}"
pre-release-commit-message = "chore(release): release v{{version}}"
